Bump plugin from 4.48 to 4.54 (#508)